<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">
    <!-- Description-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_weight="0.7"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"
            tools:text="Item" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/stock" />

                <TextView
                    android:id="@+id/stock"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/sell_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="0.5"
            android:background="@color/colorAccent"
            android:focusable="false"
            android:text="@string/sell"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/add_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@color/colorAccent"
            android:focusable="false"
            android:text="@string/add"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>