<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.inventorystore.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inventory"
            android:textColor="@color/textHeading" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/inventory_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <!-- Empty view for the list -->
            <RelativeLayout
                android:id="@+id/empty_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <ImageView
                    android:id="@+id/empty_shelter_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/warehouse" />

                <TextView
                    android:id="@+id/empty_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/empty_shelter_image"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif-medium"
                    android:paddingTop="16dp"
                    android:text="@string/empty_view_title_text"
                    android:textAppearance="?android:textAppearanceMedium" />

                <TextView
                    android:id="@+id/empty_subtitle_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/empty_title_text"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif"
                    android:paddingTop="8dp"
                    android:text="@string/empty_view_subtitle_text"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#A2AAB0" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_shopping_cart" />

</RelativeLayout>
